# c2ffi

./: .clang-format  .cmake-build.el  .gitignore  .tarignore  .tasklist.el  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists.txt.archlinux  Dockerfile  GruntCMake.json  Gruntfile.js  Makefile.am  README.md  TODO  autoclean  autogen  config.h  config.sh  configure.ac  default.nix  gen-functions  make-extras
.github/workflows/: build-arch.yml  build-nixos.yml  build-ubuntu.yml  build.yml
.nix/: build-tools.nix  c++.nix  deps.nix
CMake/: cxx_features.cmake  gruntutil.js  setup.cmake  setup_post_project.cmake
Docker/: Test-Build-Alpine.docker  Test-Build-Archlinux.docker  Test-Build-Ubuntu-20.04.docker  Test-Build-Ubuntu-20.10.docker  Test-Build-Ubuntu-22.04.docker
docker/: Dockerfile  Makefile
src/: AST.cpp  Decl.cpp  Expr.cpp  Makefile.am  OutputDriver.cpp  Template.cpp  Type.cpp  c2ffi.cpp  init.cpp  iparseast.cpp  options.cpp
src/drivers/: JSON.cpp  Null.cpp  Sexp.cpp  cffi.cpp
src/include/: Makefile.am  c2ffi.h
src/include/c2ffi/: Makefile.am  ast.h  decl.h  init.h  iparseast.h  macros.h  opt.h  predecl.h  template.h  type.h
src/test/: Makefile.am
test/: test.sh  test1.hh  test1.spec
